--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apifoodtut",
+  "name": "useswrserverissue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "10.0.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "swr": "^0.4.2"
   }
 }
